Fix search bleed through

--- a/Search/Search.css
+++ b/Search/Search.css
@@ -1,8 +1,10 @@
 .search {
   position: sticky;
   flex-grow: 0;
-  top: 7px;
-  background-color: var( --huey-medium-background-color )
+  top: 0px;
+  background-color: var( --huey-medium-background-color );
+  height: 62px;
+  padding-top: 1px;
 }
 
 .search > fieldset > input[type=search]{
